<resources>
    <string name="app_name">CIBERSEGURIDAD</string>
    <string name="fondo">PROYGOL</string>
    <string name="menu">Menú</string>
    <string name="intro">Introducción a la ciberseguridad</string>
    <string name="ciber">Concepto de ciberseguridad</string>
    <string name="obj">Objetivos de la ciberseguridad</string>
    <string name="riesgos">Riesgos</string>
    <string name="ataque">¿Que es una ataque?</string>
    <string name="tipos">Tipos de ataques</string>
    <string name="info">Políticas y procedimientos.</string>
    <string name="acerca">Acerca de</string>
    <string name="btn">Button</string>
    <string name="regresa">Regresar</string>
    <string name="nombre">Alumno: Ortega Lopez Gustavo.</string>
    <string name="grupo">Grupo: 7S11.</string>
    <string name="escuela">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MÉXICO</string>
    <string name="justi">Este proyecto fue realizado con el fin de dar a conocer a la población un poco mas acerca del tema de ciberseguridad y que esten enterados que tan seguros o no pueden estar.</string>
    <string name="contacto">Para cualquier duda o aclaracion contactar al numero: 5573919768</string>
    <string name="IntroduccionT">Introducción a la ciberseguridad.</string>
    <string name="Introduccion">Con las amenazas cada vez más complejas, pasando de ataques básicos contra un dispositivo a ataques complicados contra todos los dispositivos en la red de una organización, la seguridad tradicional simplemente no es suficiente en la era de la digitalización.
En los últimos 30 años, los jefes de TI tuvieron una tarea comparativamente envidiable en lo que respecta a la seguridad cibernética. Aunque el trabajo no era en absoluto fácil, al menos había cierta simplicidad dada la cantidad relativamente pequeña de dispositivos que necesitaban proteger.
Los equipos de seguridad de hoy tienen que idear nuevas tácticas para defenderse de las amenazas avanzadas que se enfrentan a sus redes empresariales cada vez más interconectadas.
</string>
    <string name="ConceptoT">Concepto de ciberseguridad.</string>
    <string name="Concepto">La ciberseguridad es la práctica de proteger sistemas, redes y programas de ataques digitales. Estos ataques cibernéticos generalmente tienen como objetivo acceder, cambiar o destruir información confidencial; extorsionando dinero de los usuarios; o interrumpir los procesos de negocio normales.
Implementar medidas efectivas de seguridad cibernética es particularmente difícil hoy en día porque hay más dispositivos que personas y los atacantes son cada vez más innovadores.
</string>
    <string name="ObjetivoT">Objetivos de la ciberseguridad.</string>
    <string name="TiposT">Tipos de ataques.</string>
    <string name="Tipos1">I. Ataques de phishing: El phishing es un tipo de ingeniería social que se suele emplear para robar datos de usuarios, como números de tarjetas de crédito y credenciales de inicio de sesión. Ocurre cuando un atacante, haciéndose pasar por un individuo de confianza, engaña a la víctima para abrir un mensaje de texto, correo electrónico o mensaje instantáneo. Luego, la víctima es engañada para abrir un enlace malicioso que puede provocar la congelación de un sistema como parte de un ataque de ransomware, revelar información confidencial o la instalación de malware.
Esta brecha puede tener resultados desastrosos. Para una persona, esto incluye el robo de identidad, el robo de fondos o las compras no autorizadas.
El phishing se usa a menudo para obtener un punto de apoyo en las redes gubernamentales o corporativas como parte de una trama más significativa, como una amenaza persistente avanzada (APT). En tal caso, los empleados se comprometen a obtener acceso privilegiado a datos protegidos, distribuir malware en un entorno cerrado y a evitar los parámetros de seguridad.
</string>
    <string name="Tipos2">Ataques de Spear phishing: Spear phishing es un correo electrónico dirigido a un individuo u organización en particular, que desea el acceso no autorizado a información crucial. Estos ataques no son ejecutados por atacantes aleatorios, pero lo más probable es que los individuos los realicen por secretos comerciales, ganancias financieras o inteligencia militar.
Los correos electrónicos de spear phishing parecen provenir de un individuo dentro de la propia organización del destinatario o de alguien que el objetivo conoce personalmente. Muy a menudo, hacktivistas y hackers patrocinados por el gobierno realizan estas actividades. Los ciberdelincuentes también realizan estos ataques con el objetivo de revender datos confidenciales a empresas privadas y gobiernos. Estos atacantes emplean la ingeniería social y los enfoques diseñados individualmente para personalizar efectivamente los sitios web y los mensajes.
</string>
    <string name="Tipos3">Ataque de Whale phishing: Un ataque de whale phishing es un tipo de phishing que se centra en empleados de alto perfil, como el CFO o el CEO. Está dirigido a robar información vital, ya que quienes ocupan cargos más altos en una empresa tienen acceso ilimitado a información confidencial. La mayoría de los casos de caza de ballenas manipulan a la víctima para permitir transferencias de alto valor al atacante.
El término caza de ballenas significa el tamaño del ataque, y las ballenas son atacadas en función de su posición dentro de la organización. Dado que son altamente selectivos, los ataques de caza de ballenas son más difíciles de notar en comparación con los ataques de phishing estándar.
En una empresa, los administradores de seguridad del sistema pueden disminuir la efectividad de dicho pirateo al alentar al personal de administración corporativo a asistir a la capacitación sobre concienciación de la seguridad.
</string>
    <string name="Tipos4">II. Ataques de malware: El malware es un código que se crea para afectar sigilosamente a un sistema informático comprometido sin el consentimiento del usuario. Esta amplia definición incluye muchos tipos particulares de software malévolo (malware) como spyware, ransomware, comando y control.
Muchas empresas conocidas, estados y actores criminales han sido implicados y descubiertos implementando malware.
El malware se diferencia de otro software en que puede propagarse a través de una red, causar cambios y daños, permanecer indetectable y ser persistente en el sistema infectado, puede destruir una red y llevar el rendimiento de una máquina a sus rodillas.
</string>
    <string name="Tipos5">Ransomware: El ransomware bloquea el acceso a los datos de las víctimas, lo que suele suponer una amenaza de eliminación si se paga un rescate. No hay garantía de que pagar un rescate volverá a tener acceso a los datos. El ransomware a menudo se lleva a cabo a través de un troyano que entrega una carga útil disfrazada de un archivo legítimo.
</string>
    <string name="Tipos6">Ataque de drive-by: Un ataque drive-by es un método común de distribución de malware, un atacante cibernético busca un sitio web inseguro y coloca un script malicioso en PHP o HTTP en una de las páginas. Esta secuencia de comandos puede instalar malware en la computadora que visita este sitio web o convertirse en un IFRAME que redirige el navegador de la víctima a un sitio controlado por el atacante. En la mayoría de los casos, estos scripts están confusos, y esto hace que el código sea complicado de analizar por los investigadores de seguridad. Estos ataques se conocen como drive-by porque no requieren ninguna acción por parte de la víctima, excepto visitar el sitio web comprometido. Cuando visitan el sitio comprometido, se infectan de forma automática y silenciosa si su computadora es vulnerable al malware, especialmente si no han aplicado actualizaciones de seguridad a sus aplicaciones.
</string>
    <string name="Tipos7">Caballos de Troya: Un troyano es un programa de software malicioso que se tergiversa para que parezca útil, se propagan pareciendo software de rutina y persuadiendo a una víctima para que la instale. Los troyanos están considerados entre los tipos de malware más peligrosos, ya que a menudo están diseñados para robar información financiera.
</string>
    <string name="Tipos8">III. Ataques web: Inyección SQL: La inyección de SQL, también conocida como SQLI, es un tipo de ataque que emplea código malicioso para manipular las bases de datos de back-end para acceder a información que no fue diseñada para mostrar. Esto puede incluir numerosos elementos que incluyen detalles privados del cliente, listas de usuarios o datos confidenciales de la compañía.
SQLI puede tener efectos devastadores en un negocio. Un ataque SQLI exitoso puede causar la eliminación de tablas completas, la visualización no autorizada de listas de usuarios y, en algunos casos, el atacante puede obtener acceso administrativo a una base de datos. Estos pueden ser altamente perjudiciales para un negocio. Al calcular el costo probable de SQLI, debe considerar la pérdida de la confianza del cliente en caso de que se robe información personal como direcciones, detalles de tarjetas de crédito y números de teléfono.
Aunque SQLI se puede usar para atacar cualquier base de datos SQL, los culpables a menudo se dirigen a sitios web.
</string>
    <string name="Tipos9">Cross Site Scripting: Las secuencias de comandos entre sitios (XSS) son un tipo de infracción de inyección en la que el atacante envía secuencias de comandos maliciosas al contenido de sitios web de otro modo de buena reputación. Ocurre cuando una fuente dudosa puede adjuntar su propio código a las aplicaciones web, y el código malicioso se incluye junto con el contenido dinámico que luego se envía al navegador de la víctima.
El código malicioso generalmente se envía en forma de piezas de código Javascript ejecutadas por el navegador del objetivo. Los exploits pueden incluir scripts ejecutables maliciosos en muchos idiomas, incluyendo Flash, HTML, Java y Ajax. Los ataques XSS pueden ser muy devastadores, sin embargo, aliviar las vulnerabilidades que permiten estos ataques es relativamente simple.
</string>
    <string name="Tipos10">Ataque distribuido de denegación de servicio (DDoS): La denegación de servicio (DDoS) tiene como objetivo cerrar una red o servicio, lo que hace que sea inaccesible para los usuarios previstos. Los ataques logran esta misión abrumando al objetivo con tráfico o inundándolo con información que provoca un choque. En ambas situaciones, el ataque DoS niega a usuarios legítimos, como empleados, titulares de cuentas y miembros del recurso o servicio que esperaban.
Los ataques DDoS a menudo están dirigidos a servidores web de organizaciones de alto perfil, como organizaciones comerciales y gubernamentales, compañías de medios, comercio y banca. Aunque estos ataques no resultan en la pérdida o robo de información vital u otros activos, pueden costarle a la víctima mucho dinero y tiempo para mitigarla. DDoS se usa a menudo en combinación para distraerse de otros ataques de red.
</string>
    <string name="Tipos11">Ataque de contraseña: Un ataque de contraseña simplemente significa un intento de descifrar u obtener la contraseña de un usuario con intenciones ilegales.
Los crackers pueden usar rastreadores de contraseña, ataques de diccionario y programas de cracking en ataques de contraseña. Existen pocos mecanismos de defensa contra los ataques de contraseña, pero por lo general, el remedio es inculcar una política de contraseña que incluya una longitud mínima, cambios frecuentes y palabras irreconocibles.
Los ataques de contraseña a menudo se llevan a cabo mediante la recuperación de contraseñas almacenadas o exportadas a través de un sistema informático. La recuperación de la contraseña generalmente se realiza adivinando continuamente la contraseña a través de un algoritmo de computadora. La computadora intenta varias combinaciones hasta que descubre con éxito la contraseña.
</string>
</resources>