<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ataque"
    tools:context=".introduccion">

    <Button
        android:id="@+id/btnreg"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/regresa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/TiposT"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="20sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion1Anno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos1"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion2Anno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos2"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion3Anno"
                android:layout_width="match_parent"
                android:layout_height="530dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos3"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion4Anno"
                android:layout_width="match_parent"
                android:layout_height="394dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos4"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion5Anno"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos5"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion6Anno"
                android:layout_width="match_parent"
                android:layout_height="517dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos6"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion7Anno"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos7"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion8Anno"
                android:layout_width="match_parent"
                android:layout_height="620dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos8"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion9Anno"
                android:layout_width="match_parent"
                android:layout_height="484dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos9"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion10Anno"
                android:layout_width="match_parent"
                android:layout_height="537dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos10"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/descripcion11Anno"
                android:layout_width="match_parent"
                android:layout_height="542dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Tipos11"
                android:textColor="@color/blanco"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
